# luso

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTION.md  README.md  conftest.py  pyproject.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md
.github/workflows/: build-server.yml  build.yml  mypy.yml  tests.yml
app/: config.py  data_populator.py  database.py  main.py
app/adapters/dependencies/: auth.py  db.py
app/adapters/rest/auth/: github.py  routes.py
app/adapters/rest/skill/: base.py  routes.py
app/api/: __init__.py  auth.py  item.py  skill.py  user.py
app/core/auth/: auth_service.py  base.py  exceptions.py  github.py  github_service.py  model.py
app/core/media/: icon_service.py  media_service.py
app/core/skill/: skill_service.py
app/core/user/: base.py  user_service.py
app/crud/: item.py  skill.py  user.py
app/models/: auth.py  skill.py  user.py
app/repositories/: base.py  exceptions.py  skill.py  user.py
app/schema/: base.py  item.py  skill.py  user.py
docs/: glossary.md  security.md
server/: Dockerfile  README.md
server/app/: database.py  main.py
server/app/repositories/: base.py  skill.py  user.py
server/test_resources/: sample.json
server/tests/: conftest.py  data_populator.py  test_helper.py
test_resources/: sample.json
tests/: auth.http  conftest.py  data_populator.py  item.http  test_helper.py  test_main.py  user.http
tests/adapters/dependencies/: test_auth.py
tests/api/: test_skill.py  test_skill_api.py
tests/core/auth/: test_core_auth_base.py  test_core_auth_github.py
tests/core/media/: test_icon_service.py  test_media_service.py
tests/core/skill/: test_skill_service.py
tests/core/user/: test_user_service.py
tests/item/: test_item_api.py
tests/repositories/: test_skill_repository.py
website/: .eslintrc.js  .gitignore  .prettierrc.js  README.md  jest.config.ts  package.json  rollup.config.js  tsconfig.json
website/cypress/: global.d.ts  tsconfig.json
website/cypress/fixtures/: config.json  skills.json  users.json
website/cypress/integration/: home.spec.ts  plan-create.spec.ts  skills-index.spec.ts
website/cypress/support/: commands.ts  index.ts
website/data/: sample.json
website/public/: global.css  index.html
website/src/: App.svelte  api.ts  stores.ts
website/src/components/: Drivers.svelte  Faq.svelte  Features.svelte  Footer.svelte  Header.svelte  Hero.svelte  Mechanics.svelte
website/src/pages/: _fallback.svelte  _layout.svelte  index.svelte
website/src/services/: github-auth-service.ts  skill-service.ts  user-service.spec.ts  user-service.ts
website/src/utils/: date-utils.ts  misc-utils.ts  name-generator.ts
(+62 files in other folders)
